--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,15 +1,7 @@
 main:
-  - title: "Quick-Start Guide"
-    url: /docs/quick-start-guide/
-  - title: "Posts"
-    url: /year-archive/
-  - title: "Categories"
-    url: /categories/
-  - title: "Tags"
-    url: /tags/
-  - title: "Pages"
-    url: /page-archive/
-  - title: "Collections"
-    url: /collection-archive/
-  - title: "External Link"
-    url: https://google.com
+  - title: "Past Projects"
+    url: /projects
+  - title: "Resource Catalogue"
+    url: /nusa-catalogue
+  - title: "INACL"
+    url: https://inacl.id/inacl/
