--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,5 @@
 main:
-  - title: "Past Projects"
+  - title: "Projects"
     url: /projects
   - title: "Resource Catalogue"
     url: /nusa-catalogue
